First commit on branch

--- a/Lended/Base.lproj/Main.storyboard
+++ b/Lended/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Landing Page View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LandingPageViewController" customModule="Lended" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,8 +20,37 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sd3-Eh-O6n">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WAM-Me-e4A">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="WAM-Me-e4A" secondAttribute="bottom" id="Fq5-CK-8wf"/>
+                                    <constraint firstItem="WAM-Me-e4A" firstAttribute="width" secondItem="sd3-Eh-O6n" secondAttribute="width" id="OJ5-Zo-AEZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="WAM-Me-e4A" secondAttribute="trailing" id="Py3-n2-dZB"/>
+                                    <constraint firstItem="WAM-Me-e4A" firstAttribute="height" secondItem="sd3-Eh-O6n" secondAttribute="height" id="TT0-nq-FB4"/>
+                                    <constraint firstItem="WAM-Me-e4A" firstAttribute="top" secondItem="sd3-Eh-O6n" secondAttribute="top" id="aQ6-DL-GxE"/>
+                                    <constraint firstItem="WAM-Me-e4A" firstAttribute="leading" secondItem="sd3-Eh-O6n" secondAttribute="leading" id="l6A-bY-ooa"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="sd3-Eh-O6n" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="IA9-ov-eIF"/>
+                            <constraint firstAttribute="trailing" secondItem="sd3-Eh-O6n" secondAttribute="trailing" id="IWX-ib-hYr"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="sd3-Eh-O6n" secondAttribute="bottom" id="Unp-gj-gVH"/>
+                            <constraint firstItem="sd3-Eh-O6n" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="jyg-CF-Mea"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="contentView" destination="WAM-Me-e4A" id="Sdw-7k-lf9"/>
+                        <outlet property="scrollView" destination="sd3-Eh-O6n" id="sXY-0v-cbV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
