layout shapes done

--- a/Lended/Base.lproj/Main.storyboard
+++ b/Lended/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,44 +19,39 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sd3-Eh-O6n">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WAM-Me-e4A">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XuJ-OW-SMe">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="372"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="386.66666666666669"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="0.96883370535714286" alpha="1" colorSpace="calibratedRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="372" id="ncR-Bk-nSy"/>
-                                                </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K3q-Jf-3Fo">
-                                                <rect key="frame" x="0.0" y="372" width="187.5" height="135"/>
-                                                <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" secondItem="K3q-Jf-3Fo" secondAttribute="height" multiplier="187:135" id="LCh-oE-zoF"/>
-                                                </constraints>
+                                                <rect key="frame" x="0.0" y="386.66666666666663" width="207" height="174.99999999999989"/>
+                                                <color key="backgroundColor" red="0.34718981385231018" green="0.51570582389831543" blue="0.78047454357147217" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zax-9L-Kr2">
-                                                <rect key="frame" x="187.5" y="372" width="187.5" height="135"/>
-                                                <color key="backgroundColor" red="0.36078431370000003" green="0.62745098040000002" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <rect key="frame" x="207" y="386.66666666666663" width="207" height="174.99999999999989"/>
+                                                <color key="backgroundColor" red="0.49741187691688538" green="0.59082520008087158" blue="0.66672968864440918" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l9g-Vb-dkF">
-                                                <rect key="frame" x="0.0" y="507" width="375" height="160"/>
-                                                <color key="backgroundColor" red="1" green="0.29803921570000003" blue="0.28627450980000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                <rect key="frame" x="0.0" y="561.66666666666652" width="414" height="174.33333333333337"/>
+                                                <color key="backgroundColor" red="0.89803921568627454" green="0.4392156862745098" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" secondItem="l9g-Vb-dkF" secondAttribute="height" multiplier="75:32" id="DLo-wt-SVH"/>
+                                                    <constraint firstAttribute="width" secondItem="l9g-Vb-dkF" secondAttribute="height" multiplier="64:27" id="Y2O-tU-t2D"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="Zax-9L-Kr2" firstAttribute="width" secondItem="K3q-Jf-3Fo" secondAttribute="width" id="7wY-7n-54v"/>
+                                            <constraint firstItem="l9g-Vb-dkF" firstAttribute="height" secondItem="K3q-Jf-3Fo" secondAttribute="height" id="C5g-Mk-Q4r"/>
                                             <constraint firstAttribute="trailing" secondItem="l9g-Vb-dkF" secondAttribute="trailing" id="Jzx-Lu-qm8"/>
                                             <constraint firstItem="l9g-Vb-dkF" firstAttribute="top" secondItem="Zax-9L-Kr2" secondAttribute="bottom" id="KYd-Jk-QPe"/>
                                             <constraint firstItem="K3q-Jf-3Fo" firstAttribute="leading" secondItem="WAM-Me-e4A" secondAttribute="leading" id="Q9W-22-pHr"/>
